--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,9 @@ www.sie.se</description>
   		</build>
   	</profile>
   </profiles>
-    
+
+  <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   
 </project>
