Update meta-data in pom.

--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@ www.sie.se</description>
   	<url>https://bitbucket.org/dantam/siefilelib</url>
   </scm>
   <organization>
-  	<name>ADempiere Sverige KB</name>
-  	<url>www.adempiere.se</url>
+  	<name>Notima System Integration AB</name>
+  	<url>www.notima.org</url>
   </organization>
   <issueManagement>
   	<url>https://bitbucket.org/dantam/siefilelib/issues</url>
