--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@ www.sie.se</description>
 				<executions>
 					<execution>
 						<id>sign-artifacts</id>
-						<phase>deploy</phase>
+						<phase>verify</phase>
 						<goals>
 							<goal>sign</goal>
 						</goals>
